objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Cost_Method__c</fullName>
        <label>Cost Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>FIFO</fullName>
                </value>
                <value>
                    <fullName>LIFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HoursEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The hours will be editable when the product is added to opportunity when it&apos;s checked.</description>
        <inlineHelpText>The hours will be editable when the product is added to opportunity when it&apos;s checked.</inlineHelpText>
        <label>Hours Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Rate__c</fullName>
        <description>The hourly rate for integration services.</description>
        <inlineHelpText>Enter the rate per hour for integration service products.</inlineHelpText>
        <label>Integration Rate</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Inventory (Sales only)</fullName>
                </value>
                <value>
                    <fullName>Non-Inventory</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Project_Type__c</fullName>
        <description>This field determines if the product is assigned to Milestones or a Misc. Adjustment</description>
        <inlineHelpText>This field determines if the product is assigned to Milestones or a Misc. Adjustment</inlineHelpText>
        <label>PSA Project Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSubFamily__c</fullName>
        <label>Product Add-On</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Sub_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CNET DataSource</fullName>
                </value>
                <value>
                    <fullName>BYOS</fullName>
                </value>
                <value>
                    <fullName>BYO-API</fullName>
                </value>
                <value>
                    <fullName>Monthly API</fullName>
                </value>
                <value>
                    <fullName>Language Surcharge 1</fullName>
                </value>
                <value>
                    <fullName>Language Surcharge 2</fullName>
                </value>
                <value>
                    <fullName>Language Surcharge 3</fullName>
                </value>
                <value>
                    <fullName>Language Surcharge 4</fullName>
                </value>
                <value>
                    <fullName>Language Surcharge 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <description>This field categorizes products by license type. Products that are not specific to license type are categorized as Platform.</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Find</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchasing_Unit__c</fullName>
        <label>Purchasing Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>list units of measure setup in Intacct</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ratio_to_OE_Standard__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Ratio to OE Standard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_to_PO_Standard__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Ratio to PO Standard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recognition_Type__c</fullName>
        <label>Recognition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Completion</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Role__c</fullName>
        <label>Resource Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Support Analyst</fullName>
                </value>
                <value>
                    <fullName>Personalization Consultant</fullName>
                </value>
                <value>
                    <fullName>Technical Consultant</fullName>
                </value>
                <value>
                    <fullName>Data Consultant</fullName>
                </value>
                <value>
                    <fullName>Integration Consultant</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Unit__c</fullName>
        <label>Sales Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>list units of measure setup in Intacct</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Unit__c</fullName>
        <label>Standard Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>list units of measure setup in Intacct</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UseStandardPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The price defined on the standard price book for this product will be used when it&apos;s checked.</inlineHelpText>
        <label>Use Standard Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_0_Product_Family__c</fullName>
        <description>For RR 2.0 new product categorization</description>
        <label>2.0 Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Find</fullName>
                </value>
                <value>
                    <fullName>Recommend</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Hours_Required</fullName>
        <active>true</active>
        <description>This rule requires the hours field for new records when Integration field is checked.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Family,&apos;Integration&apos;),
ISNULL(Hours__c)
)</errorConditionFormula>
        <errorDisplayField>Hours__c</errorDisplayField>
        <errorMessage>Please enter the number of hours.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Product_Category_Sub_Category</fullName>
        <active>true</active>
        <description>This rule requires the Product Category (ProductFamily) and Product Sub-Category fields for product records.</description>
        <errorConditionFormula>OR(
ISBLANK(TEXT(Family)),
ISBLANK(TEXT(Product_Sub_Category__c))
)</errorConditionFormula>
        <errorMessage>Product Category and Product Sub-Category are required.</errorMessage>
    </validationRules>
</CustomObject>